fix(ui): Remove blocking of body when modal is visible

--- a/packages/layout/src/primitives/ResponsiveContainer.css
+++ b/packages/layout/src/primitives/ResponsiveContainer.css
@@ -3,10 +3,3 @@
 	flex-direction: column;
 	flex: 1;
 }
-
-:where(
-	body:has(.cui-layout-responsive-container[data-has-visible-modal]),
-) {
-	pointer-events: none;
-	overflow: hidden;
-}
